--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -12,37 +12,24 @@
         </p>
     </div>
 
-    <div class="form-wrapper">
-        {{ form_macros.formErrors(errors) }}
+    {{ form_macros.formErrors(errors) }}
 
-        <form method="post">
-            <ul class="form-fields">
-                <li>
-                    {% set has_error = form_macros.hasError(errors, 'name') %}
-                    <label for="name">Name</label>
-                    <input type="text" class="text-input t50{{ has_error ? ' is-error' : '' }}" name="name" id="name" maxlength="30" value="{{ form.name }}" required>
-                    <small>
-                        Unique name such as <span>"myteam"</span> or <span>"my-projects"</span>.
-                        <br>Alphanumeric, hyphen, and period characters only.
-                    </small>
-                </li>
+    <form method="post">
+        <ul class="form-fields form-wrapper">
+            <li>
+                {% set has_error = form_macros.hasError(errors, 'name') %}
+                <label for="name">Name</label>
+                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="name" id="name" maxlength="100" value="{{ form.name }}" required>
+                <small>
+                    Display description for this organization such as
+                    <span>"MyTeam"</span> or <span>"My Secret Projects"</span>.
+                </small>
+            </li>
+        </ul>
 
-                <li>
-                    {% set has_error = form_macros.hasError(errors, 'description') %}
-                    <label for="description">Description</label>
-                    <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="description" id="description" maxlength="100" value="{{ form.description }}" required>
-                    <small>
-                        Display description for this organization such as
-                        <span>"MyTeam"</span> or <span>"My Secret Projects"</span>.
-                    </small>
-                </li>
-            </ul>
-
-            <ul class="list--bare">
-                <li><input type="submit" class="btn btn--action" value="Save Changes"></li>
-                <li><a class="btn" href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a></li>
-            </ul>
-
-        </form>
-    </div>
+        <p>
+            <button class="btn btn--action" type="submit">Save Changes</button>
+            <a href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a>
+        </p>
+    </form>
 {% endblock %}
