Fix version control display on app list

--- a/templates/application/add_permission.twig
+++ b/templates/application/add_permission.twig
@@ -85,8 +85,8 @@
         </li>
 
         <li>
-            <h6>Source Code</h6>
-            {{ git_macros.gitsource(application) }}
+            <h6>Version Control</h6>
+            {{ git_macros.vcs(application) }}
         </li>
     </ul>
 {% endblock %}
