--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -33,7 +33,7 @@
                 <tr>
                     <th>Application</th>
                     <th class="t40">Version Control</th>
-                    <th class="t15"></th>
+                    <th class="t20"></th>
                 </tr>
             </thead>
             <tbody>
@@ -81,8 +81,8 @@
             <thead>
                 <tr>
                     <th>Application</th>
-                    <th class="t40">Source Code</th>
-                    <th class="t15 js-collapsible-global tr"></th>
+                    <th class="t40">Version Control</th>
+                    <th class="t20 js-collapsible-global tr"></th>
                 </tr>
             </thead>
 
@@ -101,7 +101,7 @@
                     {% else %}
                         <tr>
                             <th colspan="3" class="table-mid-header" id="org-none">
-                                None
+                                Not in organization
                             </th>
                         </tr>
 
