--- a/templates/delete.confirm.twig
+++ b/templates/delete.confirm.twig
@@ -171,8 +171,8 @@
         </li>
 
         <li>
-            <h6>GitHub Source</h6>
-            {{ git_macros.gitsource(remove.entity) }}
+            <h6>Source Control</h6>
+            {{ git_macros.vcs(remove.entity) }}
         </li>
     </ul>
 {% endblock %}
