--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -38,8 +38,8 @@
         </li>
 
         <li>
-            <h6>Source Code</h6>
-            {{ git_macros.gitsource(application) }}
+            <h6>Version Control</h6>
+            {{ git_macros.vcs(application) }}
         </li>
 
         <li>
