--- a/templates/user/settings.twig
+++ b/templates/user/settings.twig
@@ -13,22 +13,20 @@
         </p>
     </div>
 
-    <section class="mtl">
-        <h2 class="mbs">Hal Preferences</h2>
-        {{ block('navigation_pref') }}
-    </section>
+    <h2>Hal Preferences</h2>
+    {{ block('navigation_pref') }}
 
-    <section class="mtl">
-        <h2 class="mbn">Personal Access Tokens</h2>
-        {{ block('access_tokens') }}
-    </section>
+    <h2>Personal Access Tokens</h2>
+    {{ block('access_tokens') }}
+
 {% endblock %}
 
 {% block navigation_pref %}
     <form method="post">
 
+        {% set is_selected = is_serious_business_mode ? ' checked' : '' %}
         <label class="checkbox-toggle">
-            <input type="checkbox" name="seriousbusiness" value="1" {{ is_serious_business_mode ? ' checked' : '' }}>
+            <input type="checkbox" name="seriousbusiness" value="1" {{ is_selected }}>
             <b class="checkbox-toggle--pill"></b>Use <b>Serious Business&trade;</b> mode
         </label>
 
@@ -39,7 +37,7 @@
         </p>
 
         <p>
-            <input class="btn btn--action btn--small" type="submit" value="Save Preferences">
+            <button class="btn btn--action" type="submit">Save Preferences</button>
         </p>
     </form>
 {% endblock %}
@@ -63,7 +61,7 @@
                         <td>{{ token|shortGUID }}</td>
                         <td>{{ token.name }}</td>
                         <td><code>{{ token.value }}</code></td>
-                        <td>
+                        <td class="tr">
                             <a href="{{ uriFor('user.token.remove', {'user': user.id, 'token': token.id}) }}">
                                 Revoke
                             </a>
@@ -76,18 +74,19 @@
         <p>You have no personal access tokens saved.</p>
     {% endif %}
 
+
+    <h3>Add new personal access token</h3>
     <form action="{{ uriFor('user.token.add', {'user': user.id}) }}" method="post">
-        <h3>Add new personal access token</h3>
 
         <div class="form-wrapper">
             <label for="token-name">Token Name</label>
             <input type="text" class="text-input" name="name" id="token-name" maxlength="50" required>
-
-            <p>
-                <input class="btn btn--action btn--small" type="submit" value="Generate Token">
-            </p>
-
         </div>
+
+        <p>
+            <button class="btn btn--action" type="submit">Generate Token</button>
+        </p>
+
     </form>
 
 {% endblock %}
