Clean up for all admin pages

--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -58,40 +58,32 @@ select {
     }
 }
 
-.form--fav {
+.form--inline {
     display: inline-block;
-    .form--fav__label {
-        display: inline-block;
-        line-height: .75em;
+}
 
-        input[type=submit] {
-            display: none;
-        }
+.js-fav label {
+
+    display: inline-block;
+    line-height: .75em;
+
+    input[type=submit] {
+        display: none;
     }
+}
 
-    .fav-added {
+.fav-added {
+    color: $success-color;
+    padding: 2px;
+    &:hover {
+        color: $error-color;
+    }
+}
+
+.fav-normal {
+    color: $light-grey;
+    padding: 2px;
+    &:hover {
         color: $success-color;
-        padding: 2px;
-        &:hover {
-            color: $white;
-            background: $error-color;
-            &:after {
-                font-size: .75em;
-                content: "Remove"
-            }
-        }
-    }
-
-    .fav-normal {
-        color: $light-grey;
-        padding: 2px;
-        &:hover {
-            color: $white;
-            background: $success-color;
-            &:after {
-                font-size: .75em;
-                content: "Add"
-            }
-        }
     }
 }
