--- a/templates/admin/system_dashboard.twig
+++ b/templates/admin/system_dashboard.twig
@@ -1,16 +1,52 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 
-{% set page_title = "System Dashboard" %}
+{% set page_title = 'System Dashboard' %}
 
 {% block content %}
     <div class="nav--page">
         <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
+            <a class="btn btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
         </p>
     </div>
+
+
+    <h2>Server Information</h2>
+    <ul class="meta-box">
+        <li>
+            <h6>Hostname</h6>
+            <div class="pre-wrapper">
+                <pre>{{ server_name }}</pre>
+            </div>
+        </li>
+
+        <li>
+            <h6>Encryption key</h6>
+            <div class="pre-wrapper">
+                <pre>{{ encryption_key }}</pre>
+            </div>
+        </li>
+
+        <li>
+            <h6>Session Encryption key</h6>
+            <div class="pre-wrapper">
+                <pre>{{ session_encryption_key }}</pre>
+            </div>
+        </li>
+
+        <li>
+            <h6>Hal Release File</h6>
+            <div class="pre-wrapper">
+                {% if release_file %}
+                    <pre>{{ release_file }}</pre>
+                {% else %}
+                    <pre>No release file found. Are you in dev?</pre>
+                {% endif %}
+            </div>
+        </li>
+    </ul>
 
     <h2>Agent Status</h2>
     <ul class="meta-box">
