--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -15,12 +15,12 @@
             <li>
                 <label>Credential Type</label>
                 <ul class="list--bare">
-                    {% for credential_type, credential_text in credential_types %}
+                    {% for credential_type in credential_options %}
                         <li>
                             {% set is_selected = form.type == credential_type ? ' checked' : '' %}
                             <label for="{{ credential_type }}">
                                 <input type="radio" id="{{ credential_type }}" name="type" value="{{ credential_type }}" data-credential-select data-credential-type="{{ credential_type }}"{{ is_selected }}>
-                                {{ credential_text }}
+                                {{ credential_type|credential_type }}
                             </label>
                         </li>
                     {% endfor %}
