--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -24,60 +24,58 @@
 
     <h2>Applications</h2>
     {% if targets %}
-    <table class="table--spacing-medium">
-        <thead>
-            <tr>
-                <th>Application</th>
-                <th>Environment</th>
-                <th>Target</th>
-                <th class="t10"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for target in targets %}
-
+        <table class="table--spacing-medium">
+            <thead>
                 <tr>
-                    <td>
-                        <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
-                    </td>
-                    <td>
-                        {{ target.group.environment.name }}
-                    </td>
-                    <td>
-                        {{ target.format }}
-                    </td>
-                    <td class="tr">
-                        <a class="btn btn--tiny" href="{{ uriFor('target', {application: target.application.id, target: target.id}) }}">View</a>
-                    </td>
+                    <th>Application</th>
+                    <th>Environment</th>
+                    <th class="t10"></th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for target in targets %}
+
+                    <tr>
+                        <td>
+                            <a href="{{ uriFor('application', {'application': target.application.id}) }}">{{ target.application.name }}</a>
+                        </td>
+                        <td>
+                            {{ target.group.environment.name }}
+                        </td>
+                        <td class="tr">
+                            <a class="btn btn--tiny" href="{{ uriFor('target', {application: target.application.id, target: target.id}) }}">View</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     {% else %}
-        <p>There are no targets associated with these credentials.</p>
+        <p>There are no applications using these credentials.</p>
     {% endif %}
 
-    <ul class="list--bare">
-        <li>
-            {% if is_admin %}
-                <a class="btn btn--action" href="{{ uriFor('credential.edit', {'credential': credential.id}) }}">Edit Credential</a>
-            {% else %}
-                {{ macros.disabled_button('Edit Credential') }}
-            {% endif %}
-        </li>
-        <li>
-            {% if is_admin %}
-                <a class="btn btn--destructive" href="{{ uriFor('credential.remove', {'credential': credential.id}) }}">Remove Credential</a>
-            {% else %}
-                {{ macros.disabled_button('Remove Credential') }}
-            {% endif %}
-        </li>
-    </ul>
+    <p>
+        {% if is_admin %}
+            <a class="btn btn--action" href="{{ uriFor('credential.edit', {'credential': credential.id}) }}">Edit Credential</a>
+        {% else %}
+            {{ macros.disabled_button('Edit Credential') }}
+        {% endif %}
+
+        {% if is_admin %}
+            <a class="btn btn--destructive" href="{{ uriFor('credential.remove', {'credential': credential.id}) }}">Remove Credential</a>
+        {% else %}
+            {{ macros.disabled_button('Remove Credential') }}
+        {% endif %}
+    </p>
 
 {% endblock %}
 
 {% block meta_table %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ credential.id|short_guid }}
+        </li>
+
         <li>
             <h6>Name</h6>
             {{ credential.name }}
@@ -85,13 +83,7 @@
 
         <li>
             <h6>Type</h6>
-            {% if credential.type == 'aws_static' %}
-                AWS Static Token
-            {% elseif credential.type == 'aws_role' %}
-                AWS STS Role
-            {% elseif credential.type == 'privatekey' %}
-                Private Key
-            {% endif %}
+            {{ credential|credential_type }}
         </li>
 
         <li>
@@ -107,6 +99,7 @@
 {% endblock %}
 
 {% block credential_details %}
+
     {% if credential.type == 'aws_static' %}
 
         <h3>AWS Access Key</h3>
@@ -123,6 +116,7 @@
         </p>
 
     {% elseif credential.type == 'aws_role' %}
+
         <h3>AWS Account ID</h3>
         <p>{{ credential.details.account }}</p>
 
@@ -156,4 +150,5 @@
         </p>
 
     {% endif %}
+
 {% endblock %}
