--- a/templates/admin/global_banner.twig
+++ b/templates/admin/global_banner.twig
@@ -1,14 +1,14 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 
-{% set page_title = "Global Message" %}
+{% set page_title = 'Global Message' %}
 
 {% block content %}
     <div class="nav--page">
         <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
+            <a class="btn btn--back" href="{{ uriFor('admin') }}">Admin Dashboard</a>
         </p>
     </div>
 
