--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -9,7 +9,8 @@
     <h1>{{ page_title }}</h1>
 
     <p>
-        Credentials can be stored and encrypted in the Hal database for use by deployments.
+        Credentials are secret passwords, API keys or other secret information that is used by to access other resources by
+        Hal such as Artifacts, Deployments, Version Control, or Identity Providers.
     </p>
 
     {{ block('cred_table') }}
@@ -29,8 +30,8 @@
         <table class="table--spacing-medium">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Type</th>
+                    <th class="t15">ID</th>
+                    <th class="t15">Type</th>
                     <th>Name</th>
                     <th>Details</th>
                 </tr>
@@ -38,23 +39,15 @@
             <tbody>
                 {% for credential in credentials %}
                     <tr>
-                        {% if is_admin %}
-                            <td><a href="{{ uriFor('credential', {'credential': credential.id}) }}">{{ credential|shortGUID }}</a></td>
-                        {% else %}
-                            <td>{{ credential|shortGUID }}</td>
-                        {% endif %}
+                        <td>
+                            <a href="{{ uriFor('credential', {'credential': credential.id}) }}">{{ credential|short_guid }}</a>
+                        </td>
                         <td>
                             {% if credential.isInternal %}
                                 {{ macros.icon('locked') }}
                             {% endif %}
 
-                            {% if credential.type == 'aws_static' %}
-                                AWS Static Token
-                            {% elseif credential.type == 'aws_role' %}
-                                AWS STS Role
-                            {% elseif credential.type == 'privatekey' %}
-                                Private Key
-                            {% endif %}
+                            {{ credential|credential_type }}
                         </td>
 
                         <td>{{ credential.name }}</td>
@@ -68,9 +61,6 @@
                             {% elseif credential.type == 'privatekey' %}
                                 Username: <code>{{ credential.details.username }}</code>
                             {% endif %}
-                        </td>
-                        <td>
-                            <a href="{{ uriFor('credential', {'credential': credential.id}) }}">View</a>
                         </td>
                     </tr>
                 {% endfor %}
