--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -18,7 +18,7 @@
     <ul class="meta-box">
         <li>
             <h6>ID</h6>
-            {{ environment.id|shortGUID }}
+            {{ environment.id|short_guid }}
         </li>
 
         <li>
