--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -21,31 +21,26 @@
         <table class="table--spacing-medium">
             <thead>
                 <tr>
-                    <th>User ID</th>
+                    <th class="t15">User ID</th>
+                    <th class="t15">Provider</th>
                     <th>Name</th>
-                    <th>Username</th>
-                    <th>Email</th>
                 </tr>
             </thead>
             <tbody>
                 {% for user in users %}
                     <tr>
                         <td>
-                            <a href="{{ uriFor('user', {'user': user.id}) }}">{{ user|shortGUID }}</a>
+                            <a href="{{ uriFor('user', {'user': user.id}) }}">{{ user|short_guid }}</a>
                             {% if user.isDisabled %}
                                 {{ macros.status('Disabled', 'error') }}
                             {% endif %}
                         </td>
                         <td>
-                            {% if is_serious_business_mode %}
-                                {{ user.name }}
-                            {% else %}
-                                {{ random(['Dave', 'Frank']) }}
-                            {% endif %}
+                            {{ user.provider|idp_type }}
                         </td>
-                        <td>{{ user.username }}</td>
-
-                        <td>{{ user.email }}</td>
+                        <td>
+                            {{ user.name }}
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
